@@ -15,10 +15,16 @@ class MessageManager
 
         QList<MessageFile*>& messages();
 
+        const QStringList& preConditions() const;
+        const QStringList& postConditions() const;
+
     private:
         QList<MessageFile*> myMessages;
+        QStringList myPreConditions;
+        QStringList myPostConditions;
 
         void loadDirectory(const QString& directory);
+        void findPrePost(const QString directory, QStringList& list);
 };
 
 #endif	/* _MESSAGEMANAGER_H */
