@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: don't hardcode pre and post conditions files.
+Nicolas Weeger 2010-05-30
+
 CRE: add 'npctoken' and 'setnpctoken' pre and post conditions.
 Nicolas Weeger 2010-05-30
 
